# PID-Visualizer

./: Cargo.toml  README.md  user_defaults.json
src/: console_input.rs  input.rs  main.rs  physics.rs  pid.rs  pid_processor.rs  visualizer.rs  web_controller.rs
src/controllers/: mod.rs  pid_controller.rs  web_controller.rs
src/logic/: drone_models.rs  input.rs  mod.rs  physics.rs  pid.rs  pid_processor.rs  visualizer.rs
src/utils/: math_utils.rs
ui/pid-visualizer/: README.md  angular.json  package-lock.json  package.json
ui/pid-visualizer/src/: index.html  main.ts
ui/pid-visualizer/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts
