[package]
name = "PIDVisualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
plotters = "0.3" # for visualization
anyhow = "1.0"
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }   # easy error handling
actix-files = "0.6"
actix-cors = "0.6"
strum = "0.24"
strum_macros = "0.24"
serde_json = "1.0.140"